--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                     <a target="_blank" href="https://gustavo-vital.github.io/snapclima/"><img class="img-projects"
                             src="./assets/projetos/Project_Snapclima.png" alt=""></a>
                     <p class="description-img">Snapclima <br> 23/02/2023 </p>
-                    <a href=""><img class="img-projects" src="./assets/projetos/Project_Dandroids.png" alt=""></a>
+                    <a href="https://gustavo-vital.github.io/projectSiteDandroids/"><img class="img-projects" src="./assets/projetos/Project_Dandroids.png" alt=""></a>
                     <p class="description-img">Site Android <br> 06/16/2024</p>
-                    <a href=""><img class="img-projects" src="./assets/projetos/Project_Metas.png" alt=""></a>
+                    <a href="https://gustavo-vital.github.io/projectMetas/"><img class="img-projects" src="./assets/projetos/Project_Metas.png" alt=""></a>
                     <p class="description-img">Metas <br> 12/06/2024</p>
                     <a href="https://gustavo-vital.github.io/Projeto-AcademiaFitPro/"><img class="img-projects"
                             src="./assets/projetos/Project_FitnessPro.png" alt=""></a>
