--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                 </div>
                 <div class="container-img_projects" id="myProjects">
                     <a  href="https://gustavo-vital.github.io/snapclima/" target="_blank"><img class="img-projects"
-                            src="./assets/projetos/Project_Snapclima.png" alt=""></a>
+                            src="./assets/projetos/Project_Snapclima.png" alt="">Projeto desenvolvidor de verificar a sua temperatura independente da região.</a>
                     <p class="description-img">Snapclima <br> 23/02/2023 </p>
-                    <a  href="https://gustavo-vital.github.io/projectSiteDandroids/" target="_blank><img class="img-projects" src="./assets/projetos/Project_Dandroids.png" alt=""></a>
+                    <a  href="https://gustavo-vital.github.io/projectSiteDandroids/" target="_blank"><img class="img-projects" src="./assets/projetos/Project_Dandroids.png" alt="Site sobre a historia do ANDROID."></a>
                     <p class="description-img">Site Android <br> 06/16/2024</p>
-                    <a  href="https://gustavo-vital.github.io/projectMetas/" target="_blank><img class="img-projects" src="./assets/projetos/Project_Metas.png" alt=""></a>
+                    <a  href="https://gustavo-vital.github.io/projectMetas/" target="_blank"><img class="img-projects" src="./assets/projetos/Project_Metas.png" alt="Site desenvolvido estabelecendo minhas metas"></a>
                     <p class="description-img">Metas <br> 12/06/2024</p>
                     <a href="https://gustavo-vital.github.io/Projeto-AcademiaFitPro/" ><img class="img-projects"
-                            src="./assets/projetos/Project_FitnessPro.png" alt=""></a>
+                            src="./assets/projetos/Project_FitnessPro.png" alt="Projeto desenvolvido de uma academia para fins de estudos." target="_blank"></a>
                     <p class="description-img">Site academia fitnes pro <br> 08/12/2022</p>
                 </div>
                 
