--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="container-img_projects" id="myProjects">
                     <a  href="https://gustavo-vital.github.io/snapclima/" target="_blank"><img class="img-projects"
-                            src="./assets/projetos/Project_Snapclima.png" alt="">Projeto desenvolvidor de verificar a sua temperatura independente da região.</a>
+                            src="./assets/projetos/Project_Snapclima.png" alt="Projeto desenvolvidor de verificar a sua temperatura independente da região."></a>
                     <p class="description-img">Snapclima <br> 23/02/2023 </p>
                     <a  href="https://gustavo-vital.github.io/projectSiteDandroids/" target="_blank"><img class="img-projects" src="./assets/projetos/Project_Dandroids.png" alt="Site sobre a historia do ANDROID."></a>
                     <p class="description-img">Site Android <br> 06/16/2024</p>
