--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <p class="description-img">Site Android <br> 06/16/2024</p>
                     <a  href="https://gustavo-vital.github.io/projectMetas/" target="_blank"><img class="img-projects" src="./assets/projetos/Project_Metas.png" alt="Site desenvolvido estabelecendo minhas metas"></a>
                     <p class="description-img">Metas <br> 12/06/2024</p>
-                    <a href="https://gustavo-vital.github.io/Projeto-AcademiaFitPro/"  target="_blank"></a>><img class="img-projects"
+                    <a href="https://gustavo-vital.github.io/Projeto-AcademiaFitPro/"  target="_blank"><img class="img-projects"
                             src="./assets/projetos/Project_FitnessPro.png" alt="Projeto desenvolvido de uma academia para fins de estudos."</a>
                     <p class="description-img">Site academia fitnes pro <br> 08/12/2022</p>
                 </div>
