portfolio gustavo vital

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <hr class="hr">
 
         <div class="myProjects">
-            <section class="container-projects">
+            <section class="container-projects" id="myProjects">
                 <h2 class="myProjects">Projetos</h2>
                 <div class="icon">
                     <ion-icon name="arrow-down-circle-outline"></ion-icon>
@@ -79,8 +79,8 @@
 
         <hr class="hr">
 
-        <div class="aboutMe" id="about">
-            <section class="container-about">
+        <div class="aboutMe" >
+            <section class="container-about" id="about">
                 <h2>Sobre</h2>
                 <div class="img-footer">
                     <div class="perfil-footer">
